tests/pos/t1625b.scala
trait T1 {
  def foo(x: String*): Int
}