tests/neg/i1701.scala
trait Foo {
  def test (x : test) : Int
}